--- a/LeetCode/47.Permutations_II.md
+++ b/LeetCode/47.Permutations_II.md
@@ -23,70 +23,24 @@ Constraints:
 * 1 <= nums.length <= 8
 * -10 <= nums[i] <= 10
 
-
-
-
-
-
-
-
-
-
-
 ### analyze
 
-[题目 46](https://github.com/MuYunyun/blog/blob/master/LeetCode/46.全排列/README.md) 的升级版
-
-```js
-/**
- * @param {number[]} nums
- * @return {number[][]}
- */
-var permuteUnique = function (nums) {
-  const result = []
-  const sortNum = nums.sort()
-  const used = new Array(nums.length).fill(false)
-  const DFS = function (arr) {
-    if (arr.length === sortNum.length) {
-      result.push(arr.slice())
-      return
-    }
-
-    for (let i = 0; i < sortNum.length; i++) {
-      if (i > 0 && sortNum[i] === sortNum[i - 1] && !used[i - 1]) { // !used[i - 1] 表示相同的元素之前已经使用过了
-        continue
-      }
-
-      if (!used[i]) {
-        arr.push(sortNum[i])
-        used[i] = true
-        DFS(arr)
-        arr.pop(sortNum[i])
-        used[i] = false
-      }
-    }
-  }
-
-  DFS([])
-
-  return result
-};
-```
-
-
-
-
-
-
-
-
-
-[1, 2]
+[1 1 2]
 
 * 1
+  * 1
+    * 2
   * 2
+    * 1
+* 1 (jump, 该位置上 1 已经在之前被使用过了, 因此需跳过)
 * 2
   * 1
+    * 1
+  * 1 (jump)
+
+思路: 回溯法。
+
+需要注意此题允许 nums 里面存有相同的数字。在此引入 `used` 数组来存储回溯过程中已使用的值。
 
 ```js
 /**
@@ -99,9 +53,10 @@ var permuteUnique = function (nums) {
   return res
 };
 
-var backtracking = function(nums, indexCache, temp, res) {
+var backtracking = function(nums, used, temp, res) {
   if (temp.length === nums.length) {
     for (let i = 0; i < res.length; i++) {
+      // a digit appears only once.
       if (res[i].toString() === temp.toString()) return
     }
     res.push([...temp])
@@ -109,17 +64,18 @@ var backtracking = function(nums, indexCache, temp, res) {
   }
 
   for (let i = 0; i < nums.length; i++) {
-    if (indexCache.indexOf(i) > -1) continue
+    // jump same used index.
+    if (used.indexOf(i) > -1) continue
     temp.push(nums[i])
-    indexCache.push(i)
-    backtracking(nums, indexCache, temp, res)
+    used.push(i)
+    backtracking(nums, used, temp, res)
     temp.pop(nums[i])
-    indexCache.pop(i)
+    used.pop(i)
   }
 }
 ```
 
-上述实现提交超时, 进行优化:
+上述解法在去重的步骤上比较耗时, 提交的时候报超时错误, 进行如下优化:
 
 ```js
 /**
@@ -129,30 +85,24 @@ var backtracking = function(nums, indexCache, temp, res) {
 var permuteUnique = function (nums) {
   const res = []
   const sortNums = nums.sort((r1, r2) => r1 - r2)
-  const used = new Array(nums.length).fill(false)
-  backtracking(sortNums, used, [], res)
+  backtracking(sortNums, [], [], res)
   return res
 };
 
 var backtracking = function(nums, used, temp, res) {
   if (temp.length === nums.length) {
-    // for (let i = 0; i < res.length; i++) {
-    //   if (res[i].toString() === temp.toString()) return
-    // }
     res.push([...temp])
     return
   }
 
   for (let i = 0; i < nums.length; i++) {
-    if (nums[i] === nums[i - 1] && !used[i - 1]) continue
-
-    if (!used[i]) {
-      temp.push(nums[i])
-      used[i] = true
-      backtracking(nums, used, temp, res)
-      temp.pop(nums[i])
-      used[i] = false
-    }
+    // 如果当前下标被使用过或者当前下标对应的值已经在之前被使用过了, 则跳过。
+    if (used.indexOf(i) > -1 || (nums[i] === nums[i - 1] && used.indexOf(i - 1) === -1)) continue
+    temp.push(nums[i])
+    used.push(i)
+    backtracking(nums, used, temp, res)
+    temp.pop(nums[i])
+    used.pop(i)
   }
 }
 ```
