--- a/LeetCode/77.Combinations.md
+++ b/LeetCode/77.Combinations.md
@@ -47,10 +47,12 @@ k: 2
 
 组合问题中, 不同顺序的解为同一个。比如 `[1, 2], [2, 1]` 为相同解。
 
-* 第一次遍历为 0 到 n - 1
-* 第二次遍历为 1 到 n - 1
+* 第一次遍历为 1 到 n
+* 第二次遍历为 2 到 n
 * ...
-* 最后一次遍历为 n - 1 - k 到 n - 1
+* 最后一次遍历为 n - k 到 n
+
+此外可以发现规律, 保留所有`增序排列的解`即为组合的解。
 
 ```js
 /**
@@ -60,23 +62,31 @@ k: 2
  */
 var combine = function(n, k) {
   const result = []
-  backTrace(n, k, 0, [], result)
+  backTrace(n, k, 1, [], result)
   return result
 };
 
 var backTrace = function(n, k, index, temp, result) {
-  if (index > n - 1 - k) {
-    return
-  }
   if (temp.length === k) {
-    result.push(temp)
+    if (ifIncrease(temp)) {
+      result.push([...temp])
+    }
     return
   }
 
-  for (let i = index; i < n; i++) {
+  for (let i = index; i <= n; i++) {
     temp.push(i)
     backTrace(n, k, index + 1, temp, result)
-    temp.pop(i)
+    temp.pop()
   }
 }
+
+var ifIncrease = function(arr) {
+  for (let i = 0; i < arr.length - 1; i++) {
+    if (arr[i] >= arr[i + 1]) return false
+  }
+  return true
+}
 ```
+
+提交, 此时报超时的错误。有没有优化的方法呢?
