--- a/LeetCode/77.Combinations.md
+++ b/LeetCode/77.Combinations.md
@@ -76,8 +76,10 @@ var backTrace = function(n, k, index, temp, result) {
 
   for (let i = index; i <= n; i++) {
     temp.push(i)
+    console.log('递归之前 =>', temp)
     backTrace(n, k, index + 1, temp, result)
     temp.pop()
+    console.log('递归之后 =>', temp)
   }
 }
 
