--- a/LeetCode/77.Combinations.md
+++ b/LeetCode/77.Combinations.md
@@ -47,11 +47,6 @@ k: 2
 
 组合问题中, 不同顺序的解为同一个。比如 `[1, 2], [2, 1]` 为相同解。
 
-* 第一次遍历为 1 到 n
-* 第二次遍历为 2 到 n
-* ...
-* 最后一次遍历为 n - k 到 n
-
 此外可以发现规律, 保留所有`增序排列的解`即为组合的解。
 
 ```js
@@ -76,10 +71,8 @@ var backTrace = function(n, k, index, temp, result) {
 
   for (let i = index; i <= n; i++) {
     temp.push(i)
-    console.log('递归之前 =>', temp)
     backTrace(n, k, index + 1, temp, result)
     temp.pop()
-    console.log('递归之后 =>', temp)
   }
 }
 
@@ -91,4 +84,37 @@ var ifIncrease = function(arr) {
 }
 ```
 
-提交, 此时报超时的错误。有没有优化的方法呢?
+提交, 此时报超时的错误。经排查发现, 截支的地方存在问题, 当前在 temp 中的值被重复使用了。修改如下
+
+```diff
+- backTrace(n, k, index + 1, temp, result)
++ backTrace(n, k, i + 1, temp, result)
+```
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number[][]}
+ */
+var combine = function(n, k) {
+  const result = []
+  backTrace(n, k, 1, [], result)
+  return result
+};
+
+var backTrace = function(n, k, index, temp, result) {
+  if (temp.length === k) {
+    result.push([...temp])
+    return
+  }
+
+  for (let i = index; i <= n; i++) {
+    temp.push(i)
+    backTrace(n, k, i + 1, temp, result)
+    temp.pop()
+  }
+}
+```
+
+### 回溯法剪支
