--- a/BasicSkill/fe_cloud/用户体验.md
+++ b/BasicSkill/fe_cloud/用户体验.md
@@ -14,3 +14,14 @@
 |  SI   |       Speed Index        |  内容展现速度  |         |
 
 - [] [to read](https://mp.weixin.qq.com/s/ESOHtwz3jCEybAN196R-rg)
+
+### 设计侧
+
+* 一致性
+  * 产品内部的导航方式
+  * 类似元素的视觉呈现
+  * 操作行为的交互准则
+* 易用性
+  * 操作简单易学
+  * 提示和帮助容易理解
+  * 界面设计清楚明了
