--- a/LeetCode/77.Combinations.md
+++ b/LeetCode/77.Combinations.md
@@ -118,3 +118,60 @@ var backTrace = function(n, k, index, temp, result) {
 ```
 
 ### 回溯法剪支
+
+还是以 `n = 5, k = 3` 为例, 上述代码中, 实际遍历的顺序如下:
+
+```js
+* 1
+  * 2
+    * 3
+    * 4
+    * 5
+  * 3
+    * 4
+    * 5
+  * 4
+    * 5
+  * 5 // 减支
+* 2
+  * 3
+    * 4
+    * 5
+  * 4
+    * 5
+  * 5 // 减支
+* 3
+  * 4
+    * 5
+  * 5 // 减支
+* 4 // 减支
+```
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number[][]}
+ */
+var combine = function(n, k) {
+  const result = []
+  backTrace(n, k, 1, [], result)
+  return result
+};
+
+var backTrace = function(n, k, index, temp, result) {
+  if (temp.length === k) {
+    result.push([...temp])
+    return
+  }
+
+  // 剪支: 当 i 等于 n 时, 后续的 backTrace() 是没有必要执行的。因此可以在 ① 或 ② 处进行减支操作。
+  // ①: 从 n - temp.length 中取还需要的数字的长度 k - temp.length
+  for (let i = index; i <= n; i++) {
+    temp.push(i)
+    // ②
+    backTrace(n, k, i + 1, temp, result)
+    temp.pop()
+  }
+}
+```
