--- a/LeetCode/77.Combinations.md
+++ b/LeetCode/77.Combinations.md
@@ -165,11 +165,11 @@ var backTrace = function(n, k, index, temp, result) {
     return
   }
 
-  // 剪支: 当 i 等于 n 时, 后续的 backTrace() 是没有必要执行的。因此可以在 ① 或 ② 处进行减支操作。
-  // ①: 从 n - temp.length 中取还需要的数字的长度 k - temp.length
+  // 剪支: 当 i 等于 n 时, 后续的 backTrace() 是没有必要执行的。因此可以进行减支操作。
+  // 题目可以转化为从 [index, 搜索上界] 中要取的数字长度为 (k - temp.length)。
+  // 搜索上界计算可得出: n - (k - temp.length) + 1
   for (let i = index; i <= n; i++) {
     temp.push(i)
-    // ②
     backTrace(n, k, i + 1, temp, result)
     temp.pop()
   }
