--- a/LeetCode/77.Combinations.md
+++ b/LeetCode/77.Combinations.md
@@ -147,6 +147,8 @@ var backTrace = function(n, k, index, temp, result) {
 * 4 // 减支
 ```
 
+此时, 当第一列的值到达 3 时, 达到`搜索上界`, [3, 4, 5] 是其中一个解。如果再往后遍历, 4 作为解的开头, 则位数达不到 3 位, 不满足要求了。同理第二列的搜索上界为 4。第三列的搜索上界为 5。接着结合代码进行优化:
+
 ```js
 /**
  * @param {number} n
@@ -165,10 +167,9 @@ var backTrace = function(n, k, index, temp, result) {
     return
   }
 
-  // 剪支: 当 i 等于 n 时, 后续的 backTrace() 是没有必要执行的。因此可以进行减支操作。
-  // 题目可以转化为从 [index, 搜索上界] 中要取的数字长度为 (k - temp.length)。
-  // 搜索上界计算可得出: n - (k - temp.length) + 1
-  for (let i = index; i <= n; i++) {
+  // 题目可以转化为从搜索上界到 n 中要取的数字长度为 (k - temp.length)。
+  // 可以得出搜索上界为: n - (k - temp.length) + 1
+  for (let i = index; i <= n - (k - temp.length) + 1; i++) {
     temp.push(i)
     backTrace(n, k, i + 1, temp, result)
     temp.pop()
