--- a/LeetCode/39.Combination_Sum.md
+++ b/LeetCode/39.Combination_Sum.md
@@ -1,30 +1,56 @@
-### title
+### 39. Combination Sum
 
-给定一个无重复元素的数组 candidates 和一个目标数 target , 找出 candidates 中所有可以使数字和为 target 的组合。
+Given an array of distinct integers candidates and a target integer target, `return a list of all unique combinations of candidates` where the chosen numbers sum to target. You may return the combinations in any order.
 
-candidates 中的数字可以无限制重复被选取。
+`The same number may be chosen from candidates an unlimited number of times`. Two combinations are unique if the frequency of at least one of the chosen numbers is different.
 
-说明:
+It is guaranteed that the number of unique combinations that sum up to target is less than 150 combinations for the given input.
 
-所有数字（包括 target）都是正整数。
-解集不能包含重复的组合。
-示例 1:
+Example 1:
 
-输入: candidates = [2,3,6,7], target = 7,
-所求解集为:
-[
-  [7],
-  [2,2,3]
-]
-示例 2:
+```js
+Input: candidates = [2,3,6,7], target = 7
+Output: [[2,2,3],[7]]
+```
 
-输入: candidates = [2,3,5], target = 8,
-所求解集为:
-[
-  [2,2,2,2],
-  [2,3,3],
-  [3,5]
-]
+Explanation:
+2 and 3 are candidates, and 2 + 2 + 3 = 7. Note that 2 can be used multiple times.
+7 is a candidate, and 7 = 7.
+These are the only two combinations.
+
+Example 2:
+
+```js
+Input: candidates = [2,3,5], target = 8
+Output: [[2,2,2,2],[2,3,3],[3,5]]
+```
+
+Example 3:
+
+```js
+Input: candidates = [2], target = 1
+Output: []
+```
+
+Example 4:
+
+```js
+Input: candidates = [1], target = 1
+Output: [[1]]
+```
+
+Example 5:
+
+```js
+Input: candidates = [1], target = 2
+Output: [[1,1]]
+```
+
+Constraints:
+* 1 <= candidates.length <= 30
+* 1 <= candidates[i] <= 200
+* All elements of candidates are distinct.
+* 1 <= target <= 500
 
 ### analyze
 
@@ -61,4 +87,57 @@ var combinationSum = function (candidates, target) {
 
   return result
 };
+```
+
+
+
+
+
+
+
+
+
+
+
+根据题目 `return a list of all unique combinations of candidates` 可以看出此题属于`组合类型`问题。
+
+target = 7
+
+* 2
+  * 2
+    * 2
+      * 2 当前及后续值减支
+    * 3 √
+    * 6 当前及后续值减支
+    * 7
+  * 3
+    * 3
+    * 6
+    * 7
+  * 6
+  * 7
+* 3
+  * 3
+    * 3
+  * 6
+  * 7
+* 6
+  * 6
+* 7 √
+
+```js
+/**
+ * @param {number[]} candidates
+ * @param {number} target
+ * @return {number[][]}
+ */
+var combinationSum = function (candidates, target) {
+  const result = []
+  recurcive(candidates, target, 0, [], result)
+  return result
+};
+
+var recurcive = function (candidates, target, start, temp, result) {
+
+}
 ```
