--- a/LeetCode/39.Combination_Sum.md
+++ b/LeetCode/39.Combination_Sum.md
@@ -54,7 +54,33 @@ Constraints:
 
 ### analyze
 
-用到了 DFS 的思想(包含栈的思想)。
+根据题目 `return a list of all unique combinations of candidates` 可以看出此题属于`组合类型`问题。
+
+target = 7
+
+* 2
+  * 2
+    * 2
+      * 2 当前及后续值减支
+    * 3 √
+    * 6 当前及后续值减支
+    * 7
+  * 3
+    * 3
+    * 6
+    * 7
+  * 6
+  * 7
+* 3
+  * 3
+    * 3
+  * 6
+  * 7
+* 6
+  * 6
+* 7 √
+
+下面给出两个 ac 了的写法, 思路大体相同, 个人推荐拆成两个函数的第二种写法:
 
 ```js
 /**
@@ -91,40 +117,6 @@ var combinationSum = function (candidates, target) {
 
 
 
-
-
-
-
-
-
-
-
-根据题目 `return a list of all unique combinations of candidates` 可以看出此题属于`组合类型`问题。
-
-target = 7
-
-* 2
-  * 2
-    * 2
-      * 2 当前及后续值减支
-    * 3 √
-    * 6 当前及后续值减支
-    * 7
-  * 3
-    * 3
-    * 6
-    * 7
-  * 6
-  * 7
-* 3
-  * 3
-    * 3
-  * 6
-  * 7
-* 6
-  * 6
-* 7 √
-
 ```js
 /**
  * @param {number[]} candidates
@@ -138,6 +130,21 @@ var combinationSum = function (candidates, target) {
 };
 
 var recurcive = function (candidates, target, start, temp, result) {
+  if (target < 0) {
+    return
+  }
 
+  if (target === 0) {
+    result.push([...temp])
+    return
+  }
+
+  for (let i = start; i < candidates.length; i++) {
+    temp.push(candidates[i])
+    target = target - candidates[i]
+    recurcive(candidates, target, i, temp, result)
+    target = target + candidates[i]
+    temp.pop(candidates[i])
+  }
 }
 ```
