--- a/LeetCode/40.Combination_Sum_II.md
+++ b/LeetCode/40.Combination_Sum_II.md
@@ -1,36 +1,40 @@
-### title
+### 40. Combination Sum II
 
-给定一个数组 candidates 和一个目标数 target , 找出 candidates 中所有可以使数字和为 target 的组合。
+Given a collection of candidate numbers (candidates) and a target number (target), find all unique combinations in candidates where the candidate numbers sum to target.
 
-candidates 中的每个数字在每个组合中只能使用一次。
+Each number in candidates may `only be used once` in the combination.
 
-说明:
+Note: The solution set must `not contain duplicate combinations`.
 
-所有数字（包括目标数）都是正整数。
-解集不能包含重复的组合。
-示例 1:
+Example 1:
 
-```
-输入: candidates = [10,1,2,7,6,1,5], target = 8,
-所求解集为:
+```js
+Input: candidates = [10,1,2,7,6,1,5], target = 8
+Output:
 [
-  [1, 7],
-  [1, 2, 5],
-  [2, 6],
-  [1, 1, 6]
+  [1,1,6],
+  [1,2,5],
+  [1,7],
+  [2,6]
 ]
 ```
 
-示例 2:
+Example 2:
 
-```
-输入: candidates = [2,5,2,1,2], target = 5,
-所求解集为:
+```js
+Input: candidates = [2,5,2,1,2], target = 5
+Output:
 [
   [1,2,2],
   [5]
 ]
 ```
+
+Constraints:
+
+* 1 <= candidates.length <= 100
+* 1 <= candidates[i] <= 50
+* 1 <= target <= 30
 
 ### analyze
 
@@ -76,5 +80,47 @@ var combinationSum2 = function (candidates, target) {
   DFS(0, [], 0)
 
   return result
+};
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+```js
+/**
+ * @param {number[]} candidates
+ * @param {number} target
+ * @return {number[][]}
+ */
+var combinationSum2 = function(candidates, target) {
+
 };
 ```
