doc: hacker-laws

--- a/LeetCode/39.Combination_Sum.md
+++ b/LeetCode/39.Combination_Sum.md
@@ -82,6 +82,8 @@ target = 7
 
 下面给出两个 ac 了的写法, 思路大体相同, 个人推荐拆成两个函数的第二种写法:
 
+写法一:
+
 ```js
 /**
  * @param {number[]} candidates
@@ -115,7 +117,7 @@ var combinationSum = function (candidates, target) {
 };
 ```
 
-
+写法二:
 
 ```js
 /**
