--- a/LeetCode/40.Combination_Sum_II.md
+++ b/LeetCode/40.Combination_Sum_II.md
@@ -40,10 +40,12 @@ Constraints:
 
 是[题目 39](https://github.com/MuYunyun/blog/blob/master/LeetCode/39.组合总和/index.js) 的改版, 在 DFS 的基础上, 对于题目要求`解集不能包含重复的组合`要稍加处理。
 
-思路:
+思路: 递归解组合问题。
 
-1. 对 candidates 排序
-2. 对这种情况要过滤: `i !== start && candidates[i] === candidates[i - 1]`, 可以以 ([1, 1, 2], 3) 这个例子进行思考不产生两个 [1, 2]
+1. 对 candidates 排序。
+2. 对这种情况要过滤: `i !== start && candidates[i] === candidates[i - 1]`, 可以以 ([1, 1, 2], 3) 这个例子进行思考不产生两个 [1, 2]。
+
+解法一:
 
 ```js
 /**
@@ -65,7 +67,7 @@ var combinationSum2 = function (candidates, target) {
     }
 
     for (let i = start; i < sortCandidates.length; i++) {
-      if (i !== start && sortCandidates[i] === sortCandidates[i - 1]) { // [1,1,2], 3 避免产生两个 [1, 2]
+      if (i !== start && sortCandidates[i] === sortCandidates[i - 1]) { // [1,1,2], 3。避免产生两个 [1, 2]
         continue
       }
 
@@ -83,36 +85,7 @@ var combinationSum2 = function (candidates, target) {
 };
 ```
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+解法二:
 
 ```js
 /**
@@ -120,7 +93,32 @@ var combinationSum2 = function (candidates, target) {
  * @param {number} target
  * @return {number[][]}
  */
-var combinationSum2 = function(candidates, target) {
-
+var combinationSum2 = function (candidates, target) {
+  const result = []
+  const sorted = candidates.sort((r1, r2) => r1 - r2)
+  recurcive(sorted, target, 0, [], result)
+  return result
 };
+
+var recurcive = function (candidates, target, start, temp, result) {
+  if (target < 0) {
+    return
+  }
+
+  if (target === 0) {
+    result.push([...temp])
+    return
+  }
+
+  for (let i = start; i < candidates.length; i++) {
+    if (candidates[i] === candidates[i - 1] && i !== start) {
+      continue
+    }
+    temp.push(candidates[i])
+    target = target - candidates[i]
+    recurcive(candidates, target, i + 1, temp, result)
+    target = target + candidates[i]
+    temp.pop(candidates[i])
+  }
+}
 ```
