--- a/LeetCode/78.Subsets.md
+++ b/LeetCode/78.Subsets.md
@@ -1,7 +1,7 @@
 ### 78.Subsets
 
 Given an integer array nums, return all possible subsets (the power set).
-The solution set must not contain duplicate subsets.
+`The solution set must not contain duplicate subsets`.
 
 Example 1:
 
@@ -20,10 +20,9 @@ Output: [[],[0]]
 Constraints:
 * 1 <= nums.length <= 10
 * -10 <= nums[i] <= 10
-
-### 回溯法
-
 ### Analyze
+
+由题意可知该题是组合问题, 可以使用回溯法解决。
 
 ```js
 /**
