--- a/LeetCode/216.Combination_Sum_III.md
+++ b/LeetCode/216.Combination_Sum_III.md
@@ -12,53 +12,53 @@ Example 1:
 ```js
 Input: k = 3, n = 7
 Output: [[1,2,4]]
-```
 
 Explanation:
 1 + 2 + 4 = 7
 There are no other valid combinations.
+```
 
 Example 2:
 
 ```js
 Input: k = 3, n = 9
 Output: [[1,2,6],[1,3,5],[2,3,4]]
-```
 
 Explanation:
 1 + 2 + 6 = 9
 1 + 3 + 5 = 9
 2 + 3 + 4 = 9
 There are no other valid combinations.
+```
 
 Example 3:
 
 ```js
 Input: k = 4, n = 1
 Output: []
-```
 
 Explanation: There are no valid combinations. [1,2,1] is not valid because 1 is used twice.
+```
 
 Example 4:
 
 ```js
 Input: k = 3, n = 2
 Output: []
-```
 
 Explanation: There are no valid combinations.
+```
 
 Example 5:
 
 ```js
 Input: k = 9, n = 45
 Output: [[1,2,3,4,5,6,7,8,9]]
-```
 
 Explanation:
 1 + 2 + 3 + 4 + 5 + 6 + 7 + 8 + 9 = 45
 ​​​​​​​There are no other valid combinations.
+```
 
 Constraints:
 
@@ -67,6 +67,8 @@ Constraints:
 
 ### Analyze
 
+从题目 `Each number is used at most once` 得知, 该题属于组合问题。
+
 ```js
 /**
  * @param {number} k
@@ -74,6 +76,29 @@ Constraints:
  * @return {number[][]}
  */
 var combinationSum3 = function(k, n) {
+  const result = []
 
+  recursive(k, n, 1, [], result)
+  return result
 };
+
+var recursive = function(k, n, start, temp, result) {
+  if (n < 0 || temp.length > k) return
+  if (n === 0 && temp.length === k) {
+    result.push([...temp])
+    return
+  }
+
+  for (let i = start; i <= 9; i++) {
+    temp.push(i)
+    n = n - i
+    recursive(k, n, i + 1, temp, result)
+    n = n + i
+    temp.pop()
+  }
+}
 ```
+
+### Sister Title
+
+39、40
