docs: webkit 技术内幕

--- a/LeetCode/90.Subsets_II.md
+++ b/LeetCode/90.Subsets_II.md
@@ -19,12 +19,38 @@ Output:
 
 ### Analyze
 
+回溯法解`组合问题`。
+
+* 1
+* 1
+  * 2
+* 1
+  * 2
+    * 2
+* 2
+* 2
+  * 2
+
 ```js
 /**
  * @param {number[]} nums
  * @return {number[][]}
  */
 var subsetsWithDup = function(nums) {
-
+  const result = []
+  const sortedNums = nums.sort((r1, r2) => r1 - r2)
+  iterator(sortedNums, 0, [], result)
+  return result
 };
+
+var iterator = function(nums, start, temp, result) {
+  result.push([...temp])
+
+  for (let i = start; i < nums.length; i++) {
+    if (nums[i] === nums[i - 1] && i !== start) { continue }
+    temp.push(nums[i])
+    iterator(nums, i + 1, temp, result)
+    temp.pop(nums[i])
+  }
+}
 ```
