--- a/LeetCode/401.Binary_Watch.md
+++ b/LeetCode/401.Binary_Watch.md
@@ -8,7 +8,7 @@ Each LED represents a zero or one, with the least significant bit on the right.
 
 For example, the above binary watch reads "3:25".
 
-Given a non-negative integer n which represents the number of LEDs that are currently on, return all possible times the watch could represent.
+Given a non-negative integer n which `represents the number of LEDs that are currently on`, return all possible times the watch could represent.
 
 Example:
 
@@ -19,10 +19,15 @@ Return: ["1:00", "2:00", "4:00", "8:00", "0:01", "0:02", "0:04", "0:08", "0:16",
 
 Note:
 * The order of output does not matter.
-* The hour must not contain a leading zero, for example "01:00" is not valid, it should be "1:00".
-* The minute must be consist of two digits and may contain a leading zero, for example "10:2" is not valid, it should be "10:02".
+* `The hour must not contain a leading zero`, for example "01:00" is not valid, it should be "1:00".
+* `The minute must be consist of two digits and may contain a leading zero`, for example "10:2" is not valid, it should be "10:02".
 
 ### Analyze
+
+题目可以转化为在 `[1, 2, 4, 8, 1, 2, 4, 8, 16, 32]` 中任意取 n 个数值, 有几种组合? 组合问题可以使用`回溯法`求解得到。
+
+* 任务
+  * 数组
 
 ```js
 /**
@@ -30,6 +35,16 @@ Note:
  * @return {string[]}
  */
 var readBinaryWatch = function(num) {
-
+  const arr = [1, 2, 4, 8, 1, 2, 4, 8, 16, 32]
+  const result = []
+  backTrace(arr, num, 0, [], result)
+  return result
 };
+
+var backTrace = function(arr, num, start, temp, result) {
+  for (let i = 0; i < arr.length; i++) {
+    // todo
+    temp.push()
+  }
+}
 ```
