--- a/LeetCode/401.Binary_Watch.md
+++ b/LeetCode/401.Binary_Watch.md
@@ -1,6 +1,6 @@
 ### 401.Binary Watch
 
-A binary watch has 4 LEDs on the top which represent the hours (0-11), and the 6 LEDs on the bottom represent the minutes (0-59).
+A binary watch has 4 LEDs on the top which represent the hours `(0-11)`, and the 6 LEDs on the bottom represent the minutes `(0-59)`.
 
 Each LED represents a zero or one, with the least significant bit on the right.
 
@@ -26,8 +26,8 @@ Note:
 
 题目可以转化为在 `[1, 2, 4, 8, 1, 2, 4, 8, 16, 32]` 中任意取 n 个数值, 有几种组合? 组合问题可以使用`回溯法`求解得到。
 
-* 任务
-  * 数组
+* 前置条件: 确认如果一个 led 灯都没亮着是否为 "0:00"。
+* 小时位数范围为 [0, 11], 分钟范围为 [0, 59]。
 
 ```js
 /**
@@ -37,14 +37,35 @@ Note:
 var readBinaryWatch = function(num) {
   const arr = [1, 2, 4, 8, 1, 2, 4, 8, 16, 32]
   const result = []
-  backTrace(arr, num, 0, [], result)
+  backTrace(arr, num, 0, [0, 0], result)
   return result
 };
 
 var backTrace = function(arr, num, start, temp, result) {
-  for (let i = 0; i < arr.length; i++) {
-    // todo
-    temp.push()
+  if (temp[0] >= 12 || temp[1] >= 60) return
+  if (num === 0) {
+    result.push(`${temp[0]}:${padding(temp[1])}`)
+    return
   }
+
+  for (let i = start; i < arr.length; i++) {
+    if (i <= 3) {
+      temp[0] = temp[0] + arr[i]
+    } else {
+      temp[1] = temp[1] + arr[i]
+    }
+    num = num - 1
+    backTrace(arr, num, i + 1, temp, result)
+    if (i <= 3) {
+      temp[0] = temp[0] - arr[i]
+    } else {
+      temp[1] = temp[1] - arr[i]
+    }
+    num = num + 1
+  }
+}
+
+var padding = function(num) {
+  return num < 10 ? `0${num}` : num
 }
 ```
