--- a/LeetCode/79.Word_Search.md
+++ b/LeetCode/79.Word_Search.md
@@ -62,8 +62,8 @@ A(S) -> B(F) -> C -> C -> E(空、E、C) -> D
 var exist = function(board, word) {
   for (let x = 0; x < board.length; x++) {
     for (let y = 0; y < board[x].length; y++) {
-      if (word[0] === border) {
-        return backTrace(board, word, 1, x, y)
+      if (word[0] === board[x][y]) {
+        return backTrace(board, word, 1, x, y, [])
       }
     }
   }
@@ -71,25 +71,25 @@ var exist = function(board, word) {
 };
 
 /** start: means start of word */
-var backTrace = (board, word, start, x, y) => {
+var backTrace = (board, word, start, x, y, used) => {
   if (start === word.length - 1 && (
     word[start] === board[x][y + 1] || word[start] === board[x + 1][y] || word[start] === board[x][y - 1] || word[start] === board[x - 1][y]
   )) {
     return true
   }
 
-  if (word[start] === board[x][y + 1]) {
-    return backTrace(board, word, start + 1, x, y + 1)
-  } else if (word[start] === board[x + 1][y]) {
-    return backTrace(board, word, start + 1, x + 1, y)
-  } else if (word[start] === board[x][y - 1]) {
-    return backTrace(board, word, start + 1, x, y - 1)
-  } else if (word[start] === board[x - 1][y]) {
-    return backTrace(board, word, start + 1, x - 1, y)
+  used.push(`${x},${y}`)
+
+  if (used.indexOf(`${x},${y + 1}`) === -1 && word[start] === board[x][y + 1]) {
+    return backTrace(board, word, start + 1, x, y + 1, used)
+  } else if (used.indexOf(`${x + 1},${y}`) === -1 && word[start] === board[x + 1][y]) {
+    return backTrace(board, word, start + 1, x + 1, y, used)
+  } else if (used.indexOf(`${x},${y - 1}`) === -1 && word[start] === board[x][y - 1]) {
+    return backTrace(board, word, start + 1, x, y - 1, used)
+  } else if (used.indexOf(`${x - 1},${y}`) === -1 && word[start] === board[x - 1][y]) {
+    return backTrace(board, word, start + 1, x - 1, y, used)
   } else {
     return false
   }
 }
 ```
-
-// todo: used value
