--- a/LeetCode/79.Word_Search.md
+++ b/LeetCode/79.Word_Search.md
@@ -42,9 +42,10 @@ Constraints:
 ### Analyze
 
 ```js
-A B C E
-S F C S
-A D E E
+     y列
+x行   A  B  C  E
+      S  F  C  S
+      A  D  E  E
 ```
 
 二维数组找路径适合用回溯法。每个节点根据`下、右、上、左`四个方向回溯查找元素。
@@ -52,6 +53,13 @@ A D E E
 拿 `ABCCED` 作为例子, 括号中为淘汰的值。
 
 A(S) -> B(F) -> C -> C -> E(空、E、C) -> D
+
+```js
+     y列
+x行   C  A  A
+      A  A  A
+      B  C  D
+```
 
 ```js
 /**
@@ -62,8 +70,12 @@ A(S) -> B(F) -> C -> C -> E(空、E、C) -> D
 var exist = function(board, word) {
   for (let x = 0; x < board.length; x++) {
     for (let y = 0; y < board[x].length; y++) {
+      if (word.length === 1 && word[0] === board[x][y]) {
+        return true
+      }
       if (word[0] === board[x][y]) {
-        return backTrace(board, word, 1, x, y, [])
+        const ifValid = backTrace(board, word, 1, x, y, [])
+        if (ifValid) return ifValid
       }
     }
   }
@@ -72,24 +84,45 @@ var exist = function(board, word) {
 
 /** start: means start of word */
 var backTrace = (board, word, start, x, y, used) => {
-  if (start === word.length - 1 && (
-    word[start] === board[x][y + 1] || word[start] === board[x + 1][y] || word[start] === board[x][y - 1] || word[start] === board[x - 1][y]
-  )) {
+  debugger
+  used.push(`${x},${y}`)
+  const useBottom = used.indexOf(`${x},${y + 1}`) === -1 && word[start] === (board[x] && board[x][y + 1])
+  const useRight = used.indexOf(`${x + 1},${y}`) === -1 && word[start] === (board[x + 1] && board[x + 1][y])
+  const useTop = used.indexOf(`${x},${y - 1}`) === -1 && word[start] === (board[x] && board[x][y - 1])
+  const useLeft = used.indexOf(`${x - 1},${y}`) === -1 && word[start] === (board[x - 1] && board[x - 1][y])
+  if (start === word.length - 1 && (useBottom || useRight || useTop || useLeft)) {
     return true
   }
 
-  used.push(`${x},${y}`)
-
-  if (used.indexOf(`${x},${y + 1}`) === -1 && word[start] === board[x][y + 1]) {
-    return backTrace(board, word, start + 1, x, y + 1, used)
-  } else if (used.indexOf(`${x + 1},${y}`) === -1 && word[start] === board[x + 1][y]) {
-    return backTrace(board, word, start + 1, x + 1, y, used)
-  } else if (used.indexOf(`${x},${y - 1}`) === -1 && word[start] === board[x][y - 1]) {
-    return backTrace(board, word, start + 1, x, y - 1, used)
-  } else if (used.indexOf(`${x - 1},${y}`) === -1 && word[start] === board[x - 1][y]) {
-    return backTrace(board, word, start + 1, x - 1, y, used)
+  if (useBottom) {
+    const tag = backTrace(board, word, start + 1, x, y + 1, used)
+    used.pop()
+    return tag
+  } else if (useRight) {
+    const tag = backTrace(board, word, start + 1, x + 1, y, used)
+    used.pop()
+    return tag
+  } else if (useTop) {
+    const tag = backTrace(board, word, start + 1, x, y - 1, used)
+    used.pop()
+    return tag
+  } else if (useLeft) {
+    const tag = backTrace(board, word, start + 1, x - 1, y, used)
+    used.pop()
+    return tag
   } else {
+    used.pop()
     return false
   }
 }
+```
+
+```js
+输入：
+[["C","A","A"],["A","A","A"],["B","C","D"]]
+"AAB"
+输出：
+false
+预期：
+true
 ```
