--- a/LeetCode/79.Word_Search.md
+++ b/LeetCode/79.Word_Search.md
@@ -39,6 +39,22 @@ Constraints:
 * 1 <= word.length <= 103
 * board and word consists only of lowercase and uppercase English letters.
 
+```js
+     y列
+x行   C  A  A
+      A  A  A
+      B  C  D
+```
+
+AAB -> true
+
+```js
+     y列
+x行   a  a  a  a
+      a  a  a  a
+      a  a  a  a
+```
+
 ### Analyze
 
 ```js
@@ -53,13 +69,6 @@ x行   A  B  C  E
 拿 `ABCCED` 作为例子, 括号中为淘汰的值。
 
 A(S) -> B(F) -> C -> C -> E(空、E、C) -> D
-
-```js
-     y列
-x行   C  A  A
-      A  A  A
-      B  C  D
-```
 
 ```js
 /**
@@ -82,47 +91,43 @@ var exist = function(board, word) {
   return false
 };
 
-/** start: means start of word */
+/**
+ * start: means start of word
+ * x: row
+ * y: column
+* */
 var backTrace = (board, word, start, x, y, used) => {
-  debugger
   used.push(`${x},${y}`)
-  const useBottom = used.indexOf(`${x},${y + 1}`) === -1 && word[start] === (board[x] && board[x][y + 1])
-  const useRight = used.indexOf(`${x + 1},${y}`) === -1 && word[start] === (board[x + 1] && board[x + 1][y])
-  const useTop = used.indexOf(`${x},${y - 1}`) === -1 && word[start] === (board[x] && board[x][y - 1])
-  const useLeft = used.indexOf(`${x - 1},${y}`) === -1 && word[start] === (board[x - 1] && board[x - 1][y])
-  if (start === word.length - 1 && (useBottom || useRight || useTop || useLeft)) {
+  const useBottom = used.indexOf(`${x + 1},${y}`) === -1 && word[start] === (board[x + 1] && board[x + 1][y])
+  const useRight = used.indexOf(`${x},${y + 1}`) === -1 && word[start] === (board[x] && board[x][y + 1])
+  const useTop = used.indexOf(`${x - 1},${y}`) === -1 && word[start] === (board[x - 1] && board[x - 1][y])
+  const useLeft = used.indexOf(`${x},${y - 1}`) === -1 && word[start] === (board[x] && board[x][y - 1])
+  if (start === word.length - 1 && (useRight || useBottom || useLeft || useTop)) {
     return true
   }
 
   if (useBottom) {
-    const tag = backTrace(board, word, start + 1, x, y + 1, used)
-    used.pop()
-    return tag
-  } else if (useRight) {
     const tag = backTrace(board, word, start + 1, x + 1, y, used)
     used.pop()
-    return tag
-  } else if (useTop) {
-    const tag = backTrace(board, word, start + 1, x, y - 1, used)
+    if (tag) return tag
+  }
+  if (useRight) {
+    const tag = backTrace(board, word, start + 1, x, y + 1, used)
     used.pop()
-    return tag
-  } else if (useLeft) {
+    if (tag) return tag
+  }
+  if (useTop) {
     const tag = backTrace(board, word, start + 1, x - 1, y, used)
     used.pop()
-    return tag
-  } else {
-    used.pop()
-    return false
+    if (tag) return tag
   }
+  if (useLeft) {
+    const tag = backTrace(board, word, start + 1, x, y - 1, used)
+    used.pop()
+    if (tag) return tag
+  }
+  return false
 }
 ```
 
-```js
-输入：
-[["C","A","A"],["A","A","A"],["B","C","D"]]
-"AAB"
-输出：
-false
-预期：
-true
-```
+思考: 这道题的解法可以用来解决生活中部分「迷宫类」的问题。
