--- a/LeetCode/79.Word_Search.md
+++ b/LeetCode/79.Word_Search.md
@@ -131,3 +131,83 @@ var backTrace = (board, word, start, x, y, used) => {
 ```
 
 思考: 这道题的解法可以用来解决生活中部分「迷宫类」的问题。
+
+### 优化
+
+优化前代码 56 行
+
+* 优化
+  * 终止条件优化
+  * 使用 for 循环优化 4 个方向
+
+```js
+/**
+ * @param {character[][]} board
+ * @param {string} word
+ * @return {boolean}
+ */
+var exist = function(board, word) {
+  for (let x = 0; x < board.length; x++) {
+    for (let y = 0; y < board[x].length; y++) {
+      // if (word.length === 1 && word[0] === board[x][y]) {
+      //   return true
+      // }
+      // Todo: from the 0
+      const ifValid = backTrace(board, word, 0, x, y, [])
+      return ifValid
+    }
+  }
+  return false
+};
+
+// 下、右、上、左
+const directions = [[1, 0], [0, 1], [-1, 0], [0, -1]]
+
+/**
+ * start: means start of word
+ * x: row
+ * y: column
+* */
+var backTrace = (board, word, start, x, y, used) => {
+  // used.push(`${x},${y}`)
+  // const useBottom = used.indexOf(`${x + 1},${y}`) === -1 && word[start] === (board[x + 1] && board[x + 1][y])
+  // const useRight = used.indexOf(`${x},${y + 1}`) === -1 && word[start] === (board[x] && board[x][y + 1])
+  // const useTop = used.indexOf(`${x - 1},${y}`) === -1 && word[start] === (board[x - 1] && board[x - 1][y])
+  // const useLeft = used.indexOf(`${x},${y - 1}`) === -1 && word[start] === (board[x] && board[x][y - 1])
+  // if (start === word.length - 1 && (useRight || useBottom || useLeft || useTop)) {
+  //   return true
+  // }
+  if (start === word.length - 1 && word[start] === board[x][y]) {
+    return true
+  }
+
+  for (let i = 0; i < directions.length; i++) {
+    used.push(`${x + directions[i][0]},${y + directions[i][1]}`)
+    const tag = backTrace(board, word, start + 1, x + directions[i][0], y + directions[i][1], used)
+    used.pop()
+    if (tag) return true
+  }
+
+  // if (useBottom) {
+  //   const tag = backTrace(board, word, start + 1, x + 1, y, used)
+  //   used.pop()
+  //   if (tag) return tag
+  // }
+  // if (useRight) {
+  //   const tag = backTrace(board, word, start + 1, x, y + 1, used)
+  //   used.pop()
+  //   if (tag) return tag
+  // }
+  // if (useTop) {
+  //   const tag = backTrace(board, word, start + 1, x - 1, y, used)
+  //   used.pop()
+  //   if (tag) return tag
+  // }
+  // if (useLeft) {
+  //   const tag = backTrace(board, word, start + 1, x, y - 1, used)
+  //   used.pop()
+  //   if (tag) return tag
+  // }
+  // return false
+}
+```
