docs: way to future

--- a/LeetCode/200.Number_of_Islands.md
+++ b/LeetCode/200.Number_of_Islands.md
@@ -37,7 +37,7 @@ Constraints:
 
 ### Analyze
 
-`floodfill` 算法。
+* `floodfill` 算法。
 
 ```js
 /**
@@ -45,6 +45,18 @@ Constraints:
  * @return {number}
  */
 var numIslands = function(grid) {
-
+  const result = []
+  for (let m = 0; m < grid.length; m++) {
+    for (let n = 0; n < grid[m].length; n++) {
+      backTrace()
+    }
+  }
+  return result.length
 };
+
+var backTrace = function() {
+
+}
 ```
+
+
