--- a/LeetCode/200.Number_of_Islands.md
+++ b/LeetCode/200.Number_of_Islands.md
@@ -46,17 +46,26 @@ Constraints:
  */
 var numIslands = function(grid) {
   const result = []
+  const used = []
   for (let m = 0; m < grid.length; m++) {
     for (let n = 0; n < grid[m].length; n++) {
-      backTrace()
+      if (used.indexOf(`${m},${n}`) === -1 && grid[m][n] === '1') {
+        result.push(used)
+        backTrace(grid, m, n, result, used)
+      }
     }
   }
   return result.length
 };
 
-var backTrace = function() {
-
+var backTrace = function(grid, m, n, result, used) {
+  const direction = [[1, 0], [0, 1], [-1, 0], [0, -1]]
+  for (let i = 0; i < direction.length; i++) {
+    const use = used.indexOf(`${m},${n}`) > -1
+    if (!use && grid[m][n] === '1') {
+      used.push(`${m},${n}`)
+      backTrace(grid, m + direction[i][0], n + direction[i][1], result, used)
+    }
+  }
 }
 ```
-
-
