docs: 未来世界的幸存者

--- a/BasicSkill/life/books/未来世界的幸存者.md
+++ b/BasicSkill/life/books/未来世界的幸存者.md
@@ -1,13 +1,24 @@
 ### 未来世界的幸存者
 
-* 世界会走向哪里?
-* 白领岗位的消亡
-  * case:
-    * 「税务顾问」岗位在美国消亡。
-    * 「银行职员」、「信贷员」、「风险控制」、「信用记录」、「外汇交易」。
-  * 未来优势的岗位
-    * 人性化与人格魅力。
-    * 创意。
-    * 决策和领导力。
-  * 为什么世界上没有安全的工作?
-    * to read: https://www.ruanyifeng.com/survivor/collapse/safe-job.html
+* 现实篇
+  * 世界会走向哪里?
+  * 白领岗位的消亡
+    * case:
+      * 「税务顾问」岗位在美国消亡。
+      * 「银行职员」、「信贷员」、「风险控制」、「信用记录」、「外汇交易」。
+    * 未来优势的岗位
+      * 人性化与人格魅力。
+      * 创意。
+      * 决策和领导力。
+    * 为什么世界上没有安全的工作?
+    * 穷忙的人生
+      * 弱者越弱, 越来越惨
+    * 为什么你可以不读大学
+      * 我们的学习和教育制度已经完全过时，传授的知识有用的少，没用的多；传授方法仍然依靠灌输和记忆，而不是启发和理解，极其低效，浪费学生的时间，打击学习热情，磨灭对知识的兴趣;
+* 职业篇
+  * 为什么雇佣制度对工人不利
+  * 母鸡与前端工程师
+    * 你应该选择，那些让你产生最大兴趣和热情的职业。因为未来所有行业，低端的、低技能的岗位都会被机器取代，只有技能最强、最有创造性的人不会被淘汰。兴趣，也只有兴趣，才会让你产生不倦的热情，钻研下去，变得更优秀。
+  * 为什么退休金是靠不住的
+* 方法篇
+  * 为什么创业。https://www.ruanyifeng.com/survivor/startup/why-startup.html
