--- a/LeetCode/200.Number_of_Islands.md
+++ b/LeetCode/200.Number_of_Islands.md
@@ -61,9 +61,10 @@ var numIslands = function(grid) {
 var backTrace = function(grid, m, n, result, used) {
   const direction = [[1, 0], [0, 1], [-1, 0], [0, -1]]
   for (let i = 0; i < direction.length; i++) {
-    const use = used.indexOf(`${m},${n}`) > -1
-    if (!use && grid[m][n] === '1') {
-      used.push(`${m},${n}`)
+    const use = used.indexOf(`${m + direction[i][0]},${n + direction[i][1]}`) > -1
+    if (!use && grid[m + direction[i][0]] && grid[m + direction[i][0]][n + direction[i][1]] === '1') {
+      used.push(`${m + direction[i][0]},${n + direction[i][1]}`)
+      console.log('used', used)
       backTrace(grid, m + direction[i][0], n + direction[i][1], result, used)
     }
   }
