docs: docs: 未来世界的幸存者

--- a/BasicSkill/life/books/未来世界的幸存者.md
+++ b/BasicSkill/life/books/未来世界的幸存者.md
@@ -21,4 +21,21 @@
     * 你应该选择，那些让你产生最大兴趣和热情的职业。因为未来所有行业，低端的、低技能的岗位都会被机器取代，只有技能最强、最有创造性的人不会被淘汰。兴趣，也只有兴趣，才会让你产生不倦的热情，钻研下去，变得更优秀。
   * 为什么退休金是靠不住的
 * 方法篇
-  * 为什么创业。https://www.ruanyifeng.com/survivor/startup/why-startup.html
+  * 为什么创业。
+    * 如果你不喜欢自己现在的状况, 又看不到希望的话, 创业是一条可以考虑的路。
+    * “自我雇佣”
+  * 如何确定创业方向
+    * 项目计划书
+      1、给谁用？
+      2、他们用这个产品来解决什么问题？
+      3、这个问题对他们而言有多重要？
+      4、我们的方法是否足够简单方便？
+      5、他们要付出的代价与所得是否匹配？
+    * 行为准则
+      * 比完美更重要的是完成。（Done is better than perfect.）
+      * 快速行动，破除陈规。（Move fast and break things.）
+      * 保持专注，持续发布。（Stay focused and keep shipping.）
+  * 不要在功能上竞争
+    * 市场定位更重要
+    * 为什么起床后不能收邮件
+      * https://www.ruanyifeng.com/survivor/startup/checking-email.html
