--- a/LeetCode/200.Number_of_Islands.md
+++ b/LeetCode/200.Number_of_Islands.md
@@ -64,9 +64,12 @@ var backTrace = function(grid, m, n, result, used) {
     const use = used.indexOf(`${m + direction[i][0]},${n + direction[i][1]}`) > -1
     if (!use && grid[m + direction[i][0]] && grid[m + direction[i][0]][n + direction[i][1]] === '1') {
       used.push(`${m + direction[i][0]},${n + direction[i][1]}`)
-      console.log('used', used)
       backTrace(grid, m + direction[i][0], n + direction[i][1], result, used)
     }
   }
 }
 ```
+
+### Sister Title
+
+130、200
