docs: 未来世界的幸存者

--- a/BasicSkill/life/books/未来世界的幸存者.md
+++ b/BasicSkill/life/books/未来世界的幸存者.md
@@ -26,16 +26,24 @@
     * “自我雇佣”
   * 如何确定创业方向
     * 项目计划书
-      1、给谁用？
-      2、他们用这个产品来解决什么问题？
-      3、这个问题对他们而言有多重要？
-      4、我们的方法是否足够简单方便？
-      5、他们要付出的代价与所得是否匹配？
+      1、给谁用?
+      2、他们用这个产品来解决什么问题?
+      3、这个问题对他们而言有多重要?
+      4、我们的方法是否足够简单方便?
+      5、他们要付出的代价与所得是否匹配?
     * 行为准则
-      * 比完美更重要的是完成。（Done is better than perfect.）
-      * 快速行动，破除陈规。（Move fast and break things.）
-      * 保持专注，持续发布。（Stay focused and keep shipping.）
+      * 比完美更重要的是完成。(Done is better than perfect.)
+      * 快速行动，破除陈规。(Move fast and break things.)
+      * 保持专注，持续发布。(Stay focused and keep shipping.)
   * 不要在功能上竞争
     * 市场定位更重要
-    * 为什么起床后不能收邮件
-      * https://www.ruanyifeng.com/survivor/startup/checking-email.html
+* 案例篇
+  * 个性也是一种竞争力
+    * papi 酱
+  * 要聊天, 先付费
+  * 即将来临的卖文时代
+  * 微媒体时代
+    * 大媒体 -> 微媒体
+  * 未来的娱乐业
+  * 技术教育的兴起
+    * https://www.ruanyifeng.com/survivor/directions/technology-training.html
