--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -6,6 +6,8 @@ A region is captured by flipping all 'O's into 'X's in that surrounded region.
 
 Example:
 
+[['X', 'X', 'X', 'X'], ['X', 'O', 'O', 'X'], ['X', 'X', 'O', 'X'], ['X', 'O', 'X', 'X']]
+
 ```js
 X X X X
 X O O X
@@ -50,8 +52,8 @@ var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
 var isValid = (border, m, n, used) => {
   if (!border[m] || !border[m][n]) return false
   const notUsed = used.indexOf(`${m},${n}`) === -1
-  // const notBorder =
-  return notUsed && border[m][n] === 'O' &&
+  const isBorder = m === 0 || n === 0 || m ===  || n ===
+  return notUsed && border[m][n] === 'O' && ()
 }
 
 var recursive = function(used) {
