--- a/BasicSkill/fe_cloud/用户体验.md
+++ b/BasicSkill/fe_cloud/用户体验.md
@@ -2,18 +2,28 @@
 
 > fork from [twitter](https://twitter.com/Barret_China/status/1281198914796830721)
 
-|  en   |        full name         |      mean      | explain |
-| :---: | :----------------------: | :------------: | :-----: |
-|  FP   |   First Content Paint    |    首屏绘制    |         |
-|  FCP  | Largest Contentful Paint |  首次内容渲染  |         |
-|  FMP  | Firtst Meaningful Paint  |  最大内容渲染  |         |
-|  CLS  | Cumulative Layout Paint  |  布局偏移总量  |         |
-|  TTL  |   Time to Interactive    | 首次可交互时间 |         |
-|  FID  |    First Input Delay     |  首次输入延迟  |         |
-|  TBT  |     Total Block Time     |   阻塞总时间   |         |
-|  SI   |       Speed Index        |  内容展现速度  |         |
+|  en   |        full name         |      mean      |                            explain                             |
+| :---: | :----------------------: | :------------: | :------------------------------------------------------------: |
+|  FP   |   First Content Paint    |    首屏绘制    |                                                                |
+|  FCP  | Largest Contentful Paint |  首次内容渲染  |                                                                |
+|  FMP  | Firtst Meaningful Paint  |  最大内容渲染  |                                                                |
+|  CLS  | Cumulative Layout Paint  |  布局偏移总量  |                                                                |
+|  TTL  |   Time to Interactive    | 首次可交互时间 |                                                                |
+|  FID  |    First Input Delay     |  首次输入延迟  |                                                                |
+|  TBT  |     Total Block Time     |   阻塞总时间   |                                                                |
+|  SI   |       Speed Index        |  内容展现速度  |                                                                |
+|  CLS  | Cumulative Layout Shift  |  累计布局偏移  | 经常会照成用户预期不同的效果, 比如点击取消应为偏移变为点击确认 |
+|  LCP  |  Largest Content Paint   |  最大内容绘制  |                                                                |
 
 - [] [to read](https://mp.weixin.qq.com/s/ESOHtwz3jCEybAN196R-rg)
+
+### 工具链
+
+* LightHouse
+  * LightHouse CI
+    * 测试组件?
+* [Chrome Search Console](https://search.google.com/search-console/about)
+* [web.dev](web.dev): 持续地了解网页的性能
 
 ### 设计侧
 
