--- a/BasicSkill/life/books/未来世界的幸存者.md
+++ b/BasicSkill/life/books/未来世界的幸存者.md
@@ -46,4 +46,6 @@
     * 大媒体 -> 微媒体
   * 未来的娱乐业
   * 技术教育的兴起
-    * https://www.ruanyifeng.com/survivor/directions/technology-training.html
+* 未来篇
+  * 高级人类的崛起
+  *
