--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -57,6 +57,28 @@ requestAnimationFrame(() => {
 })
 ```
 
+### web excel
+
+* Google Sheets
+* Office 365
+* WPS Web
+* 钉钉表格
+  * 可扩展的表格
+    * 棋盘模型
+      * Range 模型
+  * 协同的表格
+    * 名词
+      * cp(Check Point): 全量表格数据
+      * op(Operation): 单次操作的表达
+    * OT(Operation Transform) 是协同算法的关键。
+    * 上限更高的 COT 调度算法要求 OT 同时运行在服务端与客户端
+    * Rust + WASM 实现 OT, 已验证最小闭环
+  * 高性能的表格
+    * 选择 canvas 渲染表格主界面, 不用 DOM 的原因是浪费在 DOM Pipeline 的开销很大
+    * 分层渲染管线
+    * 双缓冲画布, 支持流畅的滚动
+    * 自研排版引擎
+
 ### link
 
 * [编辑器初体验](https://zhuanlan.zhihu.com/p/90931631)
