--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -49,15 +49,28 @@ var solve = function(board) {
 
 var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
 
-var isValid = (border, m, n, used) => {
-  if (!border[m] || !border[m][n]) return false
+// m: row; n: column
+var isValid = (board, m, n, used) => {
+  if (!board[m] || !board[m][n]) return false
   const notUsed = used.indexOf(`${m},${n}`) === -1
-  const isBorder = m === 0 || n === 0 || m ===  || n ===
-  return notUsed && border[m][n] === 'O' && ()
+  const isBoard = m === 0 || n === 0 || m === board.length || n === board[0].length
+  return notUsed && board[m][n] === 'O' && !isBoard
 }
 
-var recursive = function(used) {
-
+var recursive = function(board, m, n, used) {
+  if (isValid(board, m, n, used)) {
+    for (let i = 0; i < direction.length; i++) {
+      const tag = recursive(board, m + direction[i][0], n + direction[i][1], used)
+      // todo
+      if (tag) {
+        used.push(`${m},${n}`)
+        board[m][n] = 'X'
+        return true
+      }
+    }
+  } else {
+    return false
+  }
 }
 ```
 
