--- a/BasicSkill/fe_cloud/用户体验.md
+++ b/BasicSkill/fe_cloud/用户体验.md
@@ -1,7 +1,5 @@
 ### 用户体验指标
 
-> fork from [twitter](https://twitter.com/Barret_China/status/1281198914796830721)
-
 |  en   |        full name         |      mean      |                            explain                             |
 | :---: | :----------------------: | :------------: | :------------------------------------------------------------: |
 |  FP   |   First Content Paint    |    首屏绘制    |                                                                |
@@ -14,6 +12,9 @@
 |  SI   |       Speed Index        |  内容展现速度  |                                                                |
 |  CLS  | Cumulative Layout Shift  |  累计布局偏移  | 经常会照成用户预期不同的效果, 比如点击取消应为偏移变为点击确认 |
 |  LCP  |  Largest Content Paint   |  最大内容绘制  |                                                                |
+
+![指标案例](http://with.muyunyun.cn/23148c1025c99dba4663798380c0b58b.jpg)
+
 
 - [] [to read](https://mp.weixin.qq.com/s/ESOHtwz3jCEybAN196R-rg)
 
