--- a/BasicSkill/fe_cloud/用户体验.md
+++ b/BasicSkill/fe_cloud/用户体验.md
@@ -1,17 +1,17 @@
 ### 用户体验指标
 
-|  en   |        full name         |      mean      |                            explain                             |
-| :---: | :----------------------: | :------------: | :------------------------------------------------------------: |
-|  FP   |   First Content Paint    |    首屏绘制    |                                                                |
-|  FCP  | Largest Contentful Paint |  首次内容渲染  |                                                                |
-|  FMP  | Firtst Meaningful Paint  |  最大内容渲染  |                                                                |
-|  CLS  | Cumulative Layout Paint  |  布局偏移总量  |                                                                |
-|  TTL  |   Time to Interactive    | 首次可交互时间 |                                                                |
-|  FID  |    First Input Delay     |  首次输入延迟  |                                                                |
-|  TBT  |     Total Block Time     |   阻塞总时间   |                                                                |
-|  SI   |       Speed Index        |  内容展现速度  |                                                                |
-|  CLS  | Cumulative Layout Shift  |  累计布局偏移  | 经常会照成用户预期不同的效果, 比如点击取消应为偏移变为点击确认 |
-|  LCP  |  Largest Content Paint   |  最大内容绘制  |                                                                |
+|  en   |        full name        |      mean      |                            explain                             |
+| :---: | :---------------------: | :------------: | :------------------------------------------------------------: |
+|  FP   |   First Content Paint   |    首屏绘制    |                                                                |
+|  FCP  | First Contentful Paint  |  首次内容渲染  |                                                                |
+|  FMP  | First Meaningful Paint  |  最大内容渲染  |                                                                |
+|  TTL  |   Time to Interactive   | 首次可交互时间 |                                                                |
+|  FID  |    First Input Delay    |  首次输入延迟  |                                                                |
+|  TBT  |    Total Block Time     |   阻塞总时间   |                                                                |
+|  SI   |       Speed Index       |  内容展现速度  |                                                                |
+|  CLS  | Cumulative Layout Shift |  累计布局偏移  | 经常会照成用户预期不同的效果, 比如点击取消应为偏移变为点击确认 |
+|  LCP  |  Largest Content Paint  |  最大内容绘制  |                                                                |
+|  CLS  | Cumulative Layout Paint |  布局偏移总量  |                                                                |
 
 ![指标案例](http://with.muyunyun.cn/23148c1025c99dba4663798380c0b58b.jpg)
 
