--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -53,26 +53,30 @@ var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
 var isValid = (board, m, n, used) => {
   if (!board[m] || !board[m][n]) return false
   const notUsed = used.indexOf(`${m},${n}`) === -1
-  const isBoard = m === 0 || n === 0 || m === board.length || n === board[0].length
-  return notUsed && board[m][n] === 'O' && !isBoard
+  return notUsed && board[m][n] === 'O'
 }
 
 var recursive = function(board, m, n, used) {
-  if (isValid(board, m, n, used)) {
-    for (let i = 0; i < direction.length; i++) {
-      const tag = recursive(board, m + direction[i][0], n + direction[i][1], used)
-      // todo
-      if (tag) {
-        used.push(`${m},${n}`)
-        board[m][n] = 'X'
-        return true
-      }
-    }
-  } else {
-    return false
+  const isBoard = m === 0 || n === 0 || m === board.length || n === board[0].length
+  // if last m,n is not in board, and curent m,n is in board. end it.
+  if (isBoard && ???) {
+    // todo
   }
+  if (!isValid(board, m, n, used)) return false
+  for (let i = 0; i < direction.length; i++) {
+    const tag = recursive(board, m + direction[i][0], n + direction[i][1], used)
+    if (tag) {
+      used.push(`${m},${n}`)
+      board[m][n] = 'X'
+      return true
+    }
+  }
+  return false
 }
 ```
+
+* 最后边界如何处理, 除了 tag 以外。
+* 取 borar[m][n]
 
 ### Sister Title
 
