--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -53,20 +53,21 @@ var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
 var isValid = (board, m, n, used) => {
   if (!board[m] || !board[m][n]) return false
   const notUsed = used.indexOf(`${m},${n}`) === -1
-  return notUsed && board[m][n] === 'O'
+  return notUsed
 }
 
+// judge if it is in board
+var isBoard = (m, n) => m === 0 || n === 0 || m === board.length || n === board[0].length
+
 var recursive = function(board, m, n, used) {
-  const isBoard = m === 0 || n === 0 || m === board.length || n === board[0].length
-  // if last m,n is not in board, and curent m,n is in board. end it.
-  if (isBoard && ???) {
-    // todo
+  used.push(`${m},${n}`)
+  // if the last m,n is in board, end it.
+  if (isBoard(m, n) && isValid(border, m, n) && board[m][n] === 'O') {
+    return false
   }
-  if (!isValid(board, m, n, used)) return false
   for (let i = 0; i < direction.length; i++) {
     const tag = recursive(board, m + direction[i][0], n + direction[i][1], used)
     if (tag) {
-      used.push(`${m},${n}`)
       board[m][n] = 'X'
       return true
     }
