--- a/LeetCode/130.Surrounded_Regions.md
+++ b/LeetCode/130.Surrounded_Regions.md
@@ -6,7 +6,7 @@ A region is captured by flipping all 'O's into 'X's in that surrounded region.
 
 Example:
 
-[['X', 'X', 'X', 'X'], ['X', 'O', 'O', 'X'], ['X', 'X', 'O', 'X'], ['X', 'O', 'X', 'X']]
+var test = [['X', 'X', 'X', 'X'], ['X', 'O', 'O', 'X'], ['X', 'X', 'O', 'X'], ['X', 'O', 'X', 'X']]
 
 ```js
 X X X X
@@ -53,26 +53,27 @@ var direction = [[1, 0], [0, 1], [-1, 0], [0, -1]] // 下、右、上、左
 var isValid = (board, m, n, used) => {
   if (!board[m] || !board[m][n]) return false
   const notUsed = used.indexOf(`${m},${n}`) === -1
+  used.push(`${m},${n}`)
   return notUsed
 }
 
 // judge if it is in board
-var isBoard = (m, n) => m === 0 || n === 0 || m === board.length || n === board[0].length
+var isInBoard = (m, n, board) => m === 0 || n === 0 || m === board.length || n === board[0].length
 
 var recursive = function(board, m, n, used) {
-  used.push(`${m},${n}`)
-  // if the last m,n is in board, end it.
-  if (isBoard(m, n) && isValid(border, m, n) && board[m][n] === 'O') {
+  console.log('m', m, 'n', n)
+  // if the last m,n is in board && board[m][n] === 'O', end it.
+  if (!isValid(board, m, n, used) || (isInBoard(m, n, board) && board[m][n] === 'O') || board[m][n] === 'X') {
     return false
   }
   for (let i = 0; i < direction.length; i++) {
     const tag = recursive(board, m + direction[i][0], n + direction[i][1], used)
-    if (tag) {
+    if (tag && board[m][n] === 'O') {
       board[m][n] = 'X'
-      return true
     }
+    // todo: 若四周都不合理, 前 borad[m][n] === 'O', 则要让 board[m][n] = 'X'
   }
-  return false
+  return true
 }
 ```
 
